build_logs/smoke_iced_image_build_v4.log
   Compiling iced_wgpu v0.15.0-dev (C:\Users\mark_\Code\repos\graphshell\vendor\iced\wgpu)
   Compiling netrender v0.0.1 (C:\Users\mark_\Code\repos\webrender-wgpu\netrender)
warning: unused import: `SceneClip`
  --> C:\Users\mark_\Code\repos\webrender-wgpu\netrender\src\hit_test.rs:49:21
   |
49 |     NO_CLIP, Scene, SceneClip, SceneGradient, SceneImage, SceneOp, SceneRect, SceneStroke,
   |                     ^^^^^^^^^
   |
help: if this is a test module, consider adding a `#[cfg(test)]` to the containing module
  --> C:\Users\mark_\Code\repos\webrender-wgpu\netrender\src\lib.rs:30:1
   |
30 | pub mod hit_test;
   | ^^^^^^^^^^^^^^^^^
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

   Compiling netrender_text v0.0.1 (C:\Users\mark_\Code\repos\webrender-wgpu\netrender_text)
error[E0599]: no method named `as_mut` found for struct `BufferViewMut` in the current scope
   --> vendor\iced\wgpu\src\image\atlas.rs:342:49
    |
342 |         let fragment: &mut [u8] = fragment_view.as_mut();
    |                                                 ^^^^^^ method not found in `BufferViewMut`

   Compiling middlenet-netrender-bridge v0.0.1 (C:\Users\mark_\Code\repos\graphshell\crates\middlenet-netrender-bridge)
For more information about this error, try `rustc --explain E0599`.
warning: `netrender` (lib) generated 1 warning (run `cargo fix --lib -p netrender` to apply 1 suggestion)
error: could not compile `iced_wgpu` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
